--- a/app/assets/templates/fandomIndex.jst.ejs
+++ b/app/assets/templates/fandomIndex.jst.ejs
@@ -1,2 +1,2 @@
-<header class="fandom-index">Fandoms</header>
-<div class="fandom-index"></div>
+<h1>Fandoms</h1>
+<div class="fandom-index row"></div>
