--- a/app/assets/templates/homepage.jst.ejs
+++ b/app/assets/templates/homepage.jst.ejs
@@ -1,8 +1,8 @@
-<header>Welcome to Archive of Our Clone!</header>
+<h1>Welcome to Archive of Our Clone!</h1>
 <p>
-We are non-profit, non-commercial archive for public-domain stories. We currently
-have <%= model.escape("total_fandoms") %> genres, <%= model.escape("total_users") %>
-users, and <%= model.escape("total_works") %> works.
+We are a non-profit, non-commercial archive for public-domain stories. We currently
+have <strong><%= model.escape("total_fandoms") %></strong> genres, <strong><%= model.escape("total_users") %></strong>
+users, and <strong><%= model.escape("total_works") %></strong> works.
 </p><p>
 Feel free to log in, register, or try it out with a guest login. All stories and
 authors are welcome!
