--- a/app/assets/templates/fandomShow.jst.ejs
+++ b/app/assets/templates/fandomShow.jst.ejs
@@ -1,10 +1,10 @@
-<header class="fandom-show"><a href="javascript:void(0)" class='fandom-index-link'>Fandoms</a> >
-<%= category.category_name %></header>
+<h1><a href="javascript:void(0)" class='fandom-index-link'>Fandoms</a> >
+<%= category.category_name %></h1>
 <% for (var i = 0; i < alphabet.length; i++) { %>
-  <div class="show-fandom-box">
-    <% var letter = alphabet[i] %>
-    <%= letter %> <button class="top">Top</button>
-    <div class= "show-smaller-fandom-box">
+  <div class="row">
+    <div class="col-xs-4 col-xs-offset-1">
+      <% var letter = alphabet[i] %>
+      <%= letter %> <button class="top">Top</button>
       <% for (var j = 0; j < category.fandom.length; j++) { %>
         <% var fandom = category.fandom[j] %>
         <% if (fandom.name[0] === letter) { %>
@@ -18,4 +18,5 @@
       <% } %>
     </div>
   </div>
+  <p>
 <% } %>
