--- a/app/assets/templates/storyIndex.jst.ejs
+++ b/app/assets/templates/storyIndex.jst.ejs
@@ -1,3 +1,5 @@
 <header></header>
-<div class="story-index"></div>
-<section class="search"></div>
+<div class="row">
+  <div class="story-index col-xs-7 col-xs-offset-1"></div>
+  <section class="search col-xs-3"></div>
+</div>
