--- a/app/assets/templates/userIndex.jst.ejs
+++ b/app/assets/templates/userIndex.jst.ejs
@@ -1,3 +1,4 @@
-<header class="user-index">People</header>
-
-<div class="users"></div>
+<h1>People</h1>
+<div class="row">
+  <div class="users col-xs-offset-1"></div>
+</div>
