--- a/app/assets/templates/fandomIndexItem.jst.ejs
+++ b/app/assets/templates/fandomIndexItem.jst.ejs
@@ -1,14 +1,15 @@
 
-  <div class="col-xs-4 col-xs-offset-1">
+  <div class="col-xs-4">
     <h2><a href="javascript:void(0)" class="category-list-name"><%= category.category_name %></a></h2>
     <br />
     <% var length = category.fandom.length < 5 ? category.fandom.length : 5 %>
     <% for (var i = 0; i < length; i++) { %>
+      <p>
       <% var fandom = category.fandom[i] %>
       <a href="javascript:void(0)" class="fandom-list-name">
         <%= fandom.name %>
       </a>
         (<%= fandom.story_count %>)
-      <p>
+      </p>
     <% } %>
   </div>
