--- a/app/assets/templates/userIndexItem.jst.ejs
+++ b/app/assets/templates/userIndexItem.jst.ejs
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="col-xs-4 col-xs-offset-1">
+  <div>
     <a href="javascript:void(0)" class="user main-link"><%= user.escape("username") %></a><br />
     <a href="javascript:void(0)" class="story-link"><%= user.get("stories").length %> works</a>
   </div>
