--- a/app/views/static_pages/root.html.erb
+++ b/app/views/static_pages/root.html.erb
@@ -1,5 +1,5 @@
 <div class="backdrop">
   <div id="navbar"></div>
-  <div id="main"></div>
+  <div id="main" class="container"></div>
 </div>
 <script>$(ArchiveOfOurClone.initialize);</script>
