navbar on login/signup

--- a/app/assets/templates/searchSidebar.jst.ejs
+++ b/app/assets/templates/searchSidebar.jst.ejs
@@ -63,12 +63,12 @@
 <div class="form-group">
   <label for="Categories">Categories</label><br />
   <input class="form-control" type="radio" name="tags[Categories][]" value="all">All Categories
-  <input class="form-control" type="radio" name="tags[Categories][]">British
-  <input class="form-control" type="radio" name="tags[Categories][]">American
-  <input class="form-control" type="radio" name="tags[Categories][]">Russian
-  <input class="form-control" type="radio" name="tags[Categories][]">French
-  <input class="form-control" type="radio" name="tags[Categories][]">German
-  <input class="form-control" type="radio" name="tags[Categories][]">Other
+  <input class="form-control" type="radio" name="tags[Categories][]" value="British">British
+  <input class="form-control" type="radio" name="tags[Categories][]" value="American">American
+  <input class="form-control" type="radio" name="tags[Categories][]" value="Russian">Russian
+  <input class="form-control" type="radio" name="tags[Categories][]" value="French">French
+  <input class="form-control" type="radio" name="tags[Categories][]" value="German">German
+  <input class="form-control" type="radio" name="tags[Categories][]" value="Other">Other
 </div>
 
 <div class="form-group">
