--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,2 +1,5 @@
-<h1>Sign Up</h1>
-<%= render 'layouts/user_form', signup: true %>
+<div id="navbar"></div>
+<div class="container">
+  <h1>Sign Up</h1>
+  <%= render 'layouts/user_form', signup: true %>
+</div>
