--- a/app/assets/templates/fandomShow.jst.ejs
+++ b/app/assets/templates/fandomShow.jst.ejs
@@ -1,12 +1,12 @@
 <h1><a href="javascript:void(0)" class='fandom-index-link'>Fandoms</a> >
-<%= category.category_name %></h1>
+<%= category.get("category_name") %></h1>
 <% for (var i = 0; i < alphabet.length; i++) { %>
   <div class="row">
     <div class="col-xs-4 col-xs-offset-1">
       <% var letter = alphabet[i] %>
       <%= letter %> <button class="top">Top</button>
-      <% for (var j = 0; j < category.fandom.length; j++) { %>
-        <% var fandom = category.fandom[j] %>
+      <% for (var j = 0; j < category.get("fandom").length; j++) { %>
+        <% var fandom = category.get("fandom")[j] %>
         <% if (fandom.name[0] === letter) { %>
           <div class="show-fandom">
           <a href="javascript:void(0)" class="fandom-list-name">
