--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,12 +16,12 @@
 
     <div class="col-xs-4 col-xs-offset-4">
       <% if current_user %>
-        <%= current_user.username %>
+        Hello <%= current_user.username %>!
         <%= button_to "Log Out", sessions_url, method: :delete %>
       <% else %>
         <%= button_to "Log In", new_sessions_url, method: :get %>
         <%= button_to "Sign Up", new_user_url, method: :get %>
-      <% end %>`
+      <% end %>
     </div>
   </div>
 
